[package]
name = "ohos-test-runner"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "Support running cargo test / run / bench on OpenHarmony devices."
repository = "https://github.com/openharmony-rs/ohos-test-runner"

[dependencies]
rexpect = "0.6"
anyhow = "1.0.97"
sha2 = "0.10.8"
hex = "0.4.3"
log = "0.4.29"
env_logger = "0.11.8"